More alignment fixes for intro

--- a/src/Components/Education/education.scss
+++ b/src/Components/Education/education.scss
@@ -10,19 +10,16 @@
     @include mobile{
         padding-left: 0;
         padding-right: 0;
-        align-items: center;
     }
     h1{
         font-size: 50px;
-        align-items: center;
         display: flex;
         flex-direction: column;
         text-decoration: underline;
-
+        align-items: center;
         @include mobile{
             font-size: 35px;
             text-align-last: center;
-
         }
     }
    .schoolHeader{
@@ -34,8 +31,8 @@
           //  padding-left: 5%;
            // padding-right: 5%;
             font-size: 22.5px;
+            align-items: center;
             text-align-last: center;
-
         }
     }
     .extra{
@@ -48,8 +45,8 @@
             padding-right: 5%;
             padding-bottom: 10px;
             font-size: 17.5px;
+            align-items: center;
             text-align-last: center;
-
         }
     }
     .courseWork{
@@ -61,18 +58,25 @@
             padding-right: 5%;
             font-size: 17.5px;
             padding-top: 0;
-
+            align-items: center;
+            text-align-last: center;
         }
     }
     .extraCoursework{
+        padding-top: 5px;
         font-size: 20px;
-        padding-left: 10%;
+        padding-left: 15%;
+        padding-right: 15%;
+      //  padding-left: 12.5%;
         font-weight: 100;
         @include mobile{
-           align-items: center;
-            font-size: 17.5px;
-            padding-right: 10%;
-        }
+            text-align: center;
+            align-items: center;
+             font-size: 17.5px;
+             padding-right: 10%;
+             padding-left: 5%;
+             padding-right: 5%;
+         }
     }
  
 }
